...
                    title = {
                        MyTextField(
                            value = uiState.search,
                            onValueChange = {
                                viewModel.search(it)
                            },
                            hint = "Search account",
                            trailing = {
                                if (uiState.search.isEmpty()) {
                                    Icon(
                                        Icons.Default.Search,
                                        contentDescription = "Search account",
                                        modifier = Modifier.size(16.dp)
...
                                .fillMaxWidth()
                                .graphicsLayer { alpha = 1 - collapsedFraction.value }
                        )
                    },
                    actions = {
                        IconButton(onClick = { onSettingsClick(uiState.vaultId) }) {
                            Icon(Icons.Default.Settings, contentDescription = "Open vault settings")
                        }
                        Spacer(modifier = Modifier.width(8.dp))
                    },
                    colors = TopAppBarDefaults.centerAlignedTopAppBarColors().let {
                        it.copy(scrolledContainerColor = it.containerColor)
                    },
...
            }
        },
        modifier = Modifier.nestedScroll(scrollBehavior.nestedScrollConnection),
    ) { contentPadding ->
        if (uiState.filteredAccounts.isEmpty()) {
            Text(
                if (uiState.accounts.isEmpty()) "No accounts yet." else "No accounts found.",
                style = MaterialTheme.typography.bodyMedium,
                modifier = Modifier
                    .fillMaxSize()
                    .padding(contentPadding)
                    .wrapContentSize()
            )
...
